# codex-proxy

./: README.md  pyproject.toml
codex_proxy/: auth.py  cli.py  config.py  server.py  translator.py
tests/: test_server.py  test_translator.py
