[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-proxy"
version = "0.1.0"
description = "Proxy server that exposes ChatGPT Codex models as an OpenAI-compatible API"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
codex-proxy = "codex_proxy.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
